<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controladores.Cargo.FormularioCargo">

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/Registrar"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Modificar"
            android:onClick="onClick"
            android:textSize="10sp"
            />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Eliminar"
            android:onClick="onClick"
            android:textSize="10sp"
            />


    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>